--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+:root{
+  box-sizing: border-box;
+  --purple:#7d3780;
+  --dark-purple:#4a2c40;
+  --yellow:#e9bd43;
+}
+
+body{
+ color: var(--yellow);
+}
+
+h1{
+  text-align: center;
+  color: var(--dark-purple);
+}
+
+.page{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input{
+  margin: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button{
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.options:active{
+  background-color: #e9bd43;
 }
 
-.App-link {
-  color: #61dafb;
+.intro {
+  font-size: 32px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main{
+  padding: 20px;
+}
+
+label{
+  margin: 20px;
+  padding: 20px;
+}
+
+input{
+  border: none;
+  border-bottom: 1px solid var(--purple);
+  padding: 10px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  text-align: center;
+  font-size: 16px;
+}
+
+input:focus{
+  outline: none;
+  text-align: center;
+  box-shadow: 0px 1px var(--purple);
+}
+
+
+.btn{
+  margin:30px;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 10px;
+  background-color: var(--yellow);
+  border: 1px solid var(--yellow);
+}
+
+.btn:hover {
+  box-shadow: 0 0.5em 0.5em -0.4em var(--purple);
+  transform: translateY(-0.25em);
+}
+
+.btn:active{
+  box-shadow: none;
+  transform: translateY(0.25em);
+}
+
+.output{
+  margin: 10px auto;
+  padding: 30px;
+  font-size: 24px;
+  color: var(--purple);
+ 
+
+}
+
+.score{
+  color: var(--purple);
+  font-size: 24px;
+  font-weight: bold;
+
 }
